# statjax

./: LICENSE  README.md  demo.ipynb  pyproject.toml
.github/workflows/: publish.yml
src/statjax/: __init__.py  causal.py  core.py  glm.py  metrics.py  nlm.py  nn.py  probability.py  tables.py  util.py
src/statjax/glm/: __init__.py  bayes.py  canonical.py  glm.py  links.py
